<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".menuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu1"
        android:id="@+id/button"
        android:onClick="opt1"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu2"
        android:id="@+id/button2"
        android:onClick="opt2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu3"
        android:id="@+id/button3"
        android:onClick="opt3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_prompt"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:gravity="center" />
    <RadioGroup
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_below="@+id/textView"
        android:gravity="center_vertical|top"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color0"
            android:id="@+id/radioButton0"
            android:textSize="25sp"
            android:textColor="#ffe36700"
            android:checked="true"
            android:onClick="onRadioClick"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_alignParentBottom="true" />
        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color1"
        android:id="@+id/radioButton1"
        android:textSize="25sp"
        android:textColor="#ffe3200e"
        android:onClick="onRadioClick"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color2"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/radioButton1"
        android:layout_alignLeft="@+id/radioButton0"
        android:textSize="25sp"
        android:textColor="#ff5be32d"
        android:onClick="onRadioClick"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color3"
        android:id="@+id/radioButton3"
        android:layout_below="@+id/radioButton2"
        android:layout_alignLeft="@+id/radioButton0"
        android:textSize="25sp"
        android:textColor="#ff484be3"
        android:onClick="onRadioClick"/>



    </RadioGroup>
</RelativeLayout>
