<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.harley.basicmenu.opt2Activity">

    <TextView android:text="@string/opt2" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3" />
    <com.example.harley.canvasview.CustomDrawableView
        android:id="@+id/BoxCanvasView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/textView3"
        android:layout_above="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roadie"
        android:id="@+id/button4"
        android:textSize="13sp"
        android:onClick="loadDifferently"
        android:layout_alignTop="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorted"
        android:id="@+id/button5"
        android:textSize="13sp"
        android:onClick="newLoad"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button4"
        android:layout_toLeftOf="@+id/buildMenu"
        android:layout_toStartOf="@+id/buildMenu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openMenu"
        android:id="@+id/buildMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/BoxCanvasView"
        android:layout_alignEnd="@+id/BoxCanvasView" />


</RelativeLayout>
